changes image size

--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
 </head>
 <style>
     .profile{
-        display: flex;
-        justify-content: center;
-        margin-top: 5rem;
-    }
-
-    .profile-picture{
-        height: 400px;
-        width: 400px;
+        
+        width: 250px;
+        height: 250px;
     }
 </style>
 
@@ -67,7 +62,7 @@
                 <div class="col-lg-6">
                     <h2>About Me</h2>
                     <p>Hello</p>
-                    <img src="assets/graduationjals.jpg" alt="About Me" class="profile-picture">
+                    <img src="assets/graduationjals.jpg" alt="About Me" class="profile">
                 </div>
             </div>
         </div>
