--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         width: 250px;
         height: 250px;
     }
+
+    footer {
+    background: #343a40;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 20px;
+}
 </style>
 
 <body>
@@ -115,7 +123,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="" class="card-img-top" alt="HTML">
+                        <img src="assets/images.jfif" class="card-img-top" alt="HTML">
                         <div class="card-body">
                             <h5 class="card-title">My Project coming soon</h5>
                         </div>
